Fix visibility hidden can show

--- a/style.css
+++ b/style.css
@@ -4,33 +4,58 @@
 }
 
 @keyframes animationFadeIn {
-    0% {opacity : 0%; visibility: visible;}
-    99% {opacity : 100%}
-    100% {opacity : 100%}
+    0% {
+        opacity: 0%;
+    }
+
+    99% {
+        opacity: 100%;
+    }
+
+    100% {
+        visibility: visible;
+        opacity: 100%;
+    }
 }
 
 @keyframes animationFadeOut {
-    0% {opacity : 100%}
-    99% {opacity : 0%}
-    100% {opacity : 0%; visibility: hidden;}
+    0% {
+        opacity: 100%;
+    }
+
+    99% {
+        opacity: 0%;
+    }
+
+    100% {
+        visibility: hidden;
+        opacity: 0%;
+    }
 }
 
 div#loadSpinner {
     position: absolute;
     left: calc(50vw - 60px);
     top: calc(50vh - 60px);
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
+    border: 16px solid #f3f3f3;
+    /* Light grey */
+    border-top: 16px solid #3498db;
+    /* Blue */
     border-radius: 50%;
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
 
 * {
     overflow: hidden;
